--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
         </div>
         <div class="right-header">
           <h1 class="name">
-            Hi, I'm <span>Solano Milan Diaz.</span>
+            Hi, I'm <span>Kausar ahamed.</span>
             A Web Developer.
           </h1>
           <p>
             I'm a Web Developer, I love to create beautiful and functional
-            websites. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Officia, libero? Lorem ipsum dolor sit amet consectetur adipisicing
-            elit. Neque blanditiis sed aut!
+            websites.To pick up certainty and acclaim utilizing my potential
+            within the field of “Web Development”, and express my inventive
+            inventive aptitudes for self and company development.
           </p>
           <div class="btn-con">
             <a href="" class="main-btn">
-              <span class="btn-text">Download CV</span>
+              <span class="btn-text">Download Resume</span>
               <span class="btn-icon"><i class="fas fa-download"></i></span>
             </a>
           </div>
