--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
             inventive aptitudes for self and company development.
           </p>
           <div class="btn-con">
-            <a href="" class="main-btn">
+            <a
+              href="https://drive.google.com/file/d/1YLXzXAwDQsZiAVtEBd7hqxqqKA5Uvm7V/view?usp=sharing"
+              target="_blank"
+              class="main-btn"
+            >
               <span class="btn-text">Download Resume</span>
               <span class="btn-icon"><i class="fas fa-download"></i></span>
             </a>
@@ -244,7 +248,7 @@
       </section>
       <section class="container" id="portfolio">
         <div class="main-title">
-          <h2>My <span>Portfolio</span><span class="bg-text">My Work</span></h2>
+          <h2>My <span>Projects</span><span class="bg-text">My Work</span></h2>
         </div>
         <p class="port-text">
           Here is some of my work that I've done in various programming
@@ -256,16 +260,21 @@
               <img src="img/port1.jpg" alt="" />
             </div>
             <div class="hover-items">
-              <h3>Project Source</h3>
+              <h3>Air Cool</h3>
               <div class="icons">
-                <a href="#" class="icon">
+                <a
+                  href="https://github.com/kausarahamed/assignment-12-clint"
+                  target="_blank"
+                  class="icon"
+                >
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-behance"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-youtube"></i>
+                <a
+                  href="https://aircool-d3a27.web.app/"
+                  target="_blank"
+                  class="icon"
+                >
+                  <i class="fa-solid fa-eye"></i>
                 </a>
               </div>
             </div>
@@ -275,16 +284,21 @@
               <img src="img/port2.jpg" alt="" />
             </div>
             <div class="hover-items">
-              <h3>Project Source</h3>
+              <h3>Bicycle Warehouse</h3>
               <div class="icons">
-                <a href="#" class="icon">
+                <a
+                  href="https://github.com/kausarahamed/assignment-11-clint"
+                  target="_blank"
+                  class="icon"
+                >
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-behance"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-youtube"></i>
+                <a
+                  href="https://bicycle-warehouse.web.app/"
+                  target="_blank"
+                  class="icon"
+                >
+                  <i class="fa-solid fa-eye"></i>
                 </a>
               </div>
             </div>
