--- a/index.html
+++ b/index.html
@@ -72,8 +72,12 @@
               necessitatibus deleniti eum soluta.
             </p>
             <div class="btn-con">
-              <a href="#" class="main-btn">
-                <span class="btn-text">Download CV</span>
+              <a
+                href="https://drive.google.com/file/d/1YLXzXAwDQsZiAVtEBd7hqxqqKA5Uvm7V/view?usp=sharing"
+                target="_blank"
+                class="main-btn"
+              >
+                <span class="btn-text">Download Resume</span>
                 <span class="btn-icon"><i class="fas fa-download"></i></span>
               </a>
             </div>
@@ -165,84 +169,6 @@
                 </div>
               </div>
             </div>
-            <div class="progress-bar">
-              <p class="prog-title">Python</p>
-              <div class="progress-con">
-                <p class="prog-text">70%</p>
-                <div class="progress">
-                  <span class="python"></span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <h4 class="stat-title">My Timeline</h4>
-        <div class="timeline">
-          <div class="timeline-item">
-            <div class="tl-icon">
-              <i class="fas fa-briefcase"></i>
-            </div>
-            <p class="tl-duration">2010 - present</p>
-            <h5>Web Developer<span> - Vircrosoft</span></h5>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
-              quasi vero fugit.
-            </p>
-          </div>
-          <div class="timeline-item">
-            <div class="tl-icon">
-              <i class="fas fa-briefcase"></i>
-            </div>
-            <p class="tl-duration">2008 - 2011</p>
-            <h5>Software Engineer<span> - Boogle, Inc.</span></h5>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
-              quasi vero fugit.
-            </p>
-          </div>
-          <div class="timeline-item">
-            <div class="tl-icon">
-              <i class="fas fa-briefcase"></i>
-            </div>
-            <p class="tl-duration">2016 - 2017</p>
-            <h5>C++ Programmer<span> - Slime Tech</span></h5>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
-              quasi vero fugit.
-            </p>
-          </div>
-          <div class="timeline-item">
-            <div class="tl-icon">
-              <i class="fas fa-briefcase"></i>
-            </div>
-            <p class="tl-duration">2009 - 2013</p>
-            <h5>Business Degree<span> - Sussex University</span></h5>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
-              quasi vero fugit.
-            </p>
-          </div>
-          <div class="timeline-item">
-            <div class="tl-icon">
-              <i class="fas fa-briefcase"></i>
-            </div>
-            <p class="tl-duration">2013 - 2016</p>
-            <h5>Computer Science Degree<span> - Brookes University</span></h5>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
-              quasi vero fugit.
-            </p>
-          </div>
-          <div class="timeline-item">
-            <div class="tl-icon">
-              <i class="fas fa-briefcase"></i>
-            </div>
-            <p class="tl-duration">2017 - present</p>
-            <h5>3d Animation<span> - Brighton University</span></h5>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
-              quasi vero fugit.
-            </p>
           </div>
         </div>
       </section>
@@ -400,75 +326,7 @@
           </div>
         </div>
       </section>
-      <section class="container" id="blogs">
-        <div class="blogs-content">
-          <div class="main-title">
-            <h2>My <span>Blogs</span><span class="bg-text">My Blogs</span></h2>
-          </div>
-          <div class="blogs">
-            <div class="blog">
-              <img src="img/port6.jpg" alt="" />
-              <div class="blog-text">
-                <h4>How to Create Your Own Website</h4>
-                <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Doloribus natus voluptas, eos obcaecati recusandae amet?
-                </p>
-              </div>
-            </div>
-            <div class="blog">
-              <img src="img/blog1.jpg" alt="" />
-              <div class="blog-text">
-                <h4>How to Become an Expert in Web Design</h4>
-                <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Doloribus natus voluptas, eos obcaecati recusandae amet?
-                </p>
-              </div>
-            </div>
-            <div class="blog">
-              <img src="img/blog2.jpg" alt="" />
-              <div class="blog-text">
-                <h4>Become a Web Designer in 10 Days</h4>
-                <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Doloribus natus voluptas, eos obcaecati recusandae amet?
-                </p>
-              </div>
-            </div>
-            <div class="blog">
-              <img src="img/blog3.jpg" alt="" />
-              <div class="blog-text">
-                <h4>Debbuging made easy with Web Inspector</h4>
-                <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Doloribus natus voluptas, eos obcaecati recusandae amet?
-                </p>
-              </div>
-            </div>
-            <div class="blog">
-              <img src="img/port1.jpg" alt="" />
-              <div class="blog-text">
-                <h4>Get started with Web Design and UI Design</h4>
-                <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Doloribus natus voluptas, eos obcaecati recusandae amet?
-                </p>
-              </div>
-            </div>
-            <div class="blog">
-              <img src="img/port3.jpg" alt="" />
-              <div class="blog-text">
-                <h4>This is what you need to know about Web Design</h4>
-                <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Doloribus natus voluptas, eos obcaecati recusandae amet?
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+
       <section class="container contact" id="contact">
         <div class="contact-container">
           <div class="main-title">
@@ -487,7 +345,7 @@
                     <i class="fas fa-map-marker-alt"></i>
                     <span>Location</span>
                   </div>
-                  <p>: London, united Kingdom</p>
+                  <p>: Bogura,Bangladesh</p>
                 </div>
                 <div class="contact-item">
                   <div class="icon">
@@ -495,7 +353,7 @@
                     <span>Email</span>
                   </div>
                   <p>
-                    <span>: maclinzuniversal@gmail.com</span>
+                    <span>: kausarahamed4430@gmail.com</span>
                   </p>
                 </div>
                 <div class="contact-item">
@@ -504,7 +362,7 @@
                     <span>Education</span>
                   </div>
                   <p>
-                    <span>: Sussex University, East Sussex</span>
+                    <span>: Govt. Shah sultan college</span>
                   </p>
                 </div>
                 <div class="contact-item">
@@ -513,7 +371,7 @@
                     <span>Mobile Number</span>
                   </div>
                   <p>
-                    <span>: 07522670617</span>
+                    <span>: 01868384430</span>
                   </p>
                 </div>
                 <div class="contact-item">
@@ -522,7 +380,7 @@
                     <span>Languages</span>
                   </div>
                   <p>
-                    <span>: Afrikaans, English, Spanish</span>
+                    <span>: Bangla, English</span>
                   </p>
                 </div>
               </div>
@@ -562,8 +420,12 @@
                   ></textarea>
                 </div>
                 <div class="submit-btn">
-                  <a href="#" class="main-btn">
-                    <span class="btn-text">Download CV</span>
+                  <a
+                    href="https://drive.google.com/file/d/1YLXzXAwDQsZiAVtEBd7hqxqqKA5Uvm7V/view?usp=sharing"
+                    target="_blank"
+                    class="main-btn"
+                  >
+                    <span class="btn-text">Download Resume</span>
                     <span class="btn-icon"
                       ><i class="fas fa-download"></i
                     ></span>
@@ -586,9 +448,9 @@
       <div class="control" data-id="portfolio">
         <i class="fas fa-briefcase"></i>
       </div>
-      <div class="control" data-id="blogs">
+      <!-- <div class="control" data-id="blogs">
         <i class="far fa-newspaper"></i>
-      </div>
+      </div> -->
       <div class="control" data-id="contact">
         <i class="fas fa-envelope-open"></i>
       </div>
