--- a/index.html
+++ b/index.html
@@ -62,14 +62,10 @@
           <div class="left-about">
             <h4>Information About me</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet
-              labore nihil obcaecati consequatur. Debitis error doloremque, vero
-              eos vel nemo eius voluptatem dicta tenetur modi. <br />
+              I am a web developer <br />
               <br />
-              La musica delectus dolore fugiat exercitationem a, ipsum quidem
-              quo enim natus accusamus labore dolores nam. Unde. Lorem ipsum
-              dolor sit amet consectetur, adipisicing elit. Harum non
-              necessitatibus deleniti eum soluta.
+              I am very determind about my project. I alwayes try to hard work
+              and want to learn all the time.
             </p>
             <div class="btn-con">
               <a
@@ -85,7 +81,7 @@
           <div class="right-about">
             <div class="about-item">
               <div class="abt-text">
-                <p class="large-text">650+</p>
+                <p class="large-text">12+</p>
                 <p class="small-text">
                   Projects <br />
                   Completed
@@ -94,28 +90,10 @@
             </div>
             <div class="about-item">
               <div class="abt-text">
-                <p class="large-text">10+</p>
+                <p class="large-text">6+</p>
                 <p class="small-text">
-                  Years of <br />
+                  Months of <br />
                   experience
-                </p>
-              </div>
-            </div>
-            <div class="about-item">
-              <div class="abt-text">
-                <p class="large-text">300+</p>
-                <p class="small-text">
-                  Happy <br />
-                  Clients
-                </p>
-              </div>
-            </div>
-            <div class="about-item">
-              <div class="abt-text">
-                <p class="large-text">400+</p>
-                <p class="small-text">
-                  Customer <br />
-                  reviews
                 </p>
               </div>
             </div>
@@ -163,7 +141,7 @@
             <div class="progress-bar">
               <p class="prog-title">NodeJS</p>
               <div class="progress-con">
-                <p class="prog-text">87%</p>
+                <p class="prog-text">77%</p>
                 <div class="progress">
                   <span class="node"></span>
                 </div>
@@ -202,6 +180,30 @@
                 >
                   <i class="fa-solid fa-eye"></i>
                 </a>
+                <div class="popup" onclick="myFunction()">
+                  Details
+                  <span class="popuptext" id="myPopup"
+                    ><span>● This project basically Air conditioner Parts.</span
+                    ><br />
+                    <span
+                      >●Authentication system implement by firebase so that all
+                      users can visit the website but can’t access all the
+                      features without log in & after log in user can place
+                      orde</span
+                    ><br />
+                    <span
+                      >● Only the admin can see all users in the dashboard and
+                      make others as an admin.</span
+                    ><br />
+                    <span>● Users can make payments by using the card.</span
+                    ><br />
+                    <span
+                      >Tecnology used: React JS, Tostify , React
+                      Tailwind,Heroku, Sweet Alert2, React Ratting, React Slider
+                      Use to create this project.</span
+                    ></span
+                  >
+                </div>
               </div>
             </div>
           </div>
@@ -226,6 +228,30 @@
                 >
                   <i class="fa-solid fa-eye"></i>
                 </a>
+                <div class="popup" onclick="myFunction()">
+                  Deta
+                  <span class="popuptext" id="myPopup"
+                    ><span>● This project basically Air conditioner Parts.</span
+                    ><br />
+                    <span
+                      >●Authentication system implement by firebase so that all
+                      users can visit the website but can’t access all the
+                      features without log in & after log in user can place
+                      orde</span
+                    ><br />
+                    <span
+                      >● Only the admin can see all users in the dashboard and
+                      make others as an admin.</span
+                    ><br />
+                    <span>● Users can make payments by using the card.</span
+                    ><br />
+                    <span
+                      >Tecnology used: React JS, Tostify , React
+                      Tailwind,Heroku, Sweet Alert2, React Ratting, React Slider
+                      Use to create this project.</span
+                    ></span
+                  >
+                </div>
               </div>
             </div>
           </div>
@@ -234,93 +260,28 @@
               <img src="img/port3.jpg" alt="" />
             </div>
             <div class="hover-items">
-              <h3>Project Source</h3>
+              <h3>Learning-fluorescence</h3>
               <div class="icons">
-                <a href="#" class="icon">
+                <a
+                  href="https://github.com/kausarahamed/Assignment-10"
+                  target="_blank"
+                  class="icon"
+                >
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-behance"></i>
+                <a
+                  href="https://learning-fluorescence.web.app/"
+                  target="_blank"
+                  class="icon"
+                >
+                  <i class="fa-solid fa-eye"></i>
                 </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-youtube"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="portfolio-item">
-            <div class="image">
-              <img src="img/port4.jpg" alt="" />
-            </div>
-            <div class="hover-items">
-              <h3>Project Source</h3>
-              <div class="icons">
-                <a href="#" class="icon">
-                  <i class="fab fa-github"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-behance"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-youtube"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="portfolio-item">
-            <div class="image">
-              <img src="img/port5.jpg" alt="" />
-            </div>
-            <div class="hover-items">
-              <h3>Project Source</h3>
-              <div class="icons">
-                <a href="#" class="icon">
-                  <i class="fab fa-github"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-behance"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-youtube"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="portfolio-item">
-            <div class="image">
-              <img src="img/port2.jpg" alt="" />
-            </div>
-            <div class="hover-items">
-              <h3>Project Source</h3>
-              <div class="icons">
-                <a href="#" class="icon">
-                  <i class="fab fa-github"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-behance"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-youtube"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="portfolio-item">
-            <div class="image">
-              <img src="img/port7.jpg" alt="" />
-            </div>
-            <div class="hover-items">
-              <h3>Project Source</h3>
-              <div class="icons">
-                <a href="#" class="icon">
-                  <i class="fab fa-github"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-behance"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-youtube"></i>
-                </a>
+
+                <div class="submit-btn">
+                  <a href="#" target="_blank" class="main-btn">
+                    <span class="btn-text">Details</span>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
@@ -335,10 +296,7 @@
           <div class="contact-content-con">
             <div class="left-contact">
               <h4>Contact me here</h4>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. In,
-                laborum numquam? Quam excepturi perspiciatis quas quasi.
-              </p>
+              <p>You can call me any time.</p>
               <div class="contact-info">
                 <div class="contact-item">
                   <div class="icon">
@@ -367,7 +325,7 @@
                 </div>
                 <div class="contact-item">
                   <div class="icon">
-                    <i class="fas fa-user-graduate"></i>
+                    <i class="fas fa-mobile"></i>
                     <span>Mobile Number</span>
                   </div>
                   <p>
@@ -386,17 +344,15 @@
               </div>
               <div class="contact-icons">
                 <div class="contact-icon">
-                  <a href="www.facebook.com" target="_blank">
+                  <a
+                    href="https://www.facebook.com/kausar4430/"
+                    target="_blank"
+                  >
                     <i class="fab fa-facebook-f"></i>
                   </a>
-                  <a href="#" target="_blank">
-                    <i class="fab fa-twitter"></i>
-                  </a>
-                  <a href="#" target="_blank">
+
+                  <a href="https://github.com/kausarahamed" target="_blank">
                     <i class="fab fa-github"></i>
-                  </a>
-                  <a href="#" target="_blank">
-                    <i class="fab fa-youtube"></i>
                   </a>
                 </div>
               </div>
@@ -419,6 +375,12 @@
                     placeholder="Message Here..."
                   ></textarea>
                 </div>
+                <div class="submit-btn">
+                  <button class="main-btn nic">
+                    <span class="btn-text">Submit</span>
+                  </button>
+                </div>
+
                 <div class="submit-btn">
                   <a
                     href="https://drive.google.com/file/d/1YLXzXAwDQsZiAVtEBd7hqxqqKA5Uvm7V/view?usp=sharing"
@@ -448,9 +410,7 @@
       <div class="control" data-id="portfolio">
         <i class="fas fa-briefcase"></i>
       </div>
-      <!-- <div class="control" data-id="blogs">
-        <i class="far fa-newspaper"></i>
-      </div> -->
+
       <div class="control" data-id="contact">
         <i class="fas fa-envelope-open"></i>
       </div>
@@ -459,5 +419,12 @@
       <i class="fas fa-adjust"></i>
     </div>
     <script src="app.js"></script>
+
+    <script>
+      function myFunction() {
+        var popup = document.getElementById("myPopup");
+        popup.classList.toggle("show");
+      }
+    </script>
   </body>
 </html>
