--- a/index.html
+++ b/index.html
@@ -181,28 +181,34 @@
                   <i class="fa-solid fa-eye"></i>
                 </a>
                 <div class="popup" onclick="myFunction()">
-                  Details
-                  <span class="popuptext" id="myPopup"
-                    ><span>● This project basically Air conditioner Parts.</span
-                    ><br />
-                    <span
-                      >●Authentication system implement by firebase so that all
+                  Click me!
+                  <span class="popuptext" id="myPopup">
+                    <span class="pleft">
+                      ● This project basically Air conditioner Parts.
+                    </span>
+                    <br />
+                    <span class="pleft">
+                      ● Authentication system implement by firebase so that all
                       users can visit the website but can’t access all the
                       features without log in & after log in user can place
-                      orde</span
-                    ><br />
-                    <span
-                      >● Only the admin can see all users in the dashboard and
-                      make others as an admin.</span
-                    ><br />
-                    <span>● Users can make payments by using the card.</span
-                    ><br />
-                    <span
-                      >Tecnology used: React JS, Tostify , React
-                      Tailwind,Heroku, Sweet Alert2, React Ratting, React Slider
-                      Use to create this project.</span
-                    ></span
-                  >
+                      order.
+                    </span>
+                    <br />
+                    <span class="pleft">
+                      ● Only the admin can see all users in the dashboard and
+                      make others as an admin.
+                    </span>
+                    <br />
+                    <span class="pleft">
+                      ● Users can make payments by using the card.
+                    </span>
+                    <br />
+                    <span class="pleft">
+                      Tecnology used: React JS, Tostify , React Tailwind,Heroku,
+                      Sweet Alert2, React Ratting, React Slider Use to create
+                      this project.
+                    </span>
+                  </span>
                 </div>
               </div>
             </div>
@@ -228,29 +234,35 @@
                 >
                   <i class="fa-solid fa-eye"></i>
                 </a>
-                <div class="popup" onclick="myFunction()">
-                  Deta
-                  <span class="popuptext" id="myPopup"
-                    ><span>● This project basically Air conditioner Parts.</span
-                    ><br />
-                    <span
-                      >●Authentication system implement by firebase so that all
-                      users can visit the website but can’t access all the
-                      features without log in & after log in user can place
-                      orde</span
-                    ><br />
-                    <span
-                      >● Only the admin can see all users in the dashboard and
-                      make others as an admin.</span
-                    ><br />
-                    <span>● Users can make payments by using the card.</span
-                    ><br />
-                    <span
-                      >Tecnology used: React JS, Tostify , React
-                      Tailwind,Heroku, Sweet Alert2, React Ratting, React Slider
-                      Use to create this project.</span
-                    ></span
-                  >
+                <div class="popup" onclick="myFunctiont()">
+                  Details
+                  <span class="popuptext" id="myPopupt">
+                    <span class="pleft">
+                      ● This project basically bicycle warehouse.
+                    </span>
+                    <br />
+                    <span class="pleft">
+                      ● This is a full-stack project for a warehouse management
+                      system website where an authentic user can control
+                      products, stock quantities and create new products
+                      updates, and delete.
+                    </span>
+                    <br />
+                    <span class="pleft">
+                      ● After login user can access all products, add products,
+                      update & delete from the database product.
+                    </span>
+                    <br />
+                    <span class="pleft">
+                      ● Authentication system implement by firebase.
+                    </span>
+                    <br />
+                    <span class="pleft">
+                      Tecnology used: React JS, Tostify , React Tailwind,Heroku,
+                      Sweet Alert2, React Ratting, React Slider Use to create
+                      this project.
+                    </span>
+                  </span>
                 </div>
               </div>
             </div>
@@ -277,10 +289,35 @@
                   <i class="fa-solid fa-eye"></i>
                 </a>
 
-                <div class="submit-btn">
-                  <a href="#" target="_blank" class="main-btn">
-                    <span class="btn-text">Details</span>
-                  </a>
+                <div class="popup" onclick="myFunction()">
+                  Click me!
+                  <span class="popuptext" id="myPopup">
+                    <span class="pleft">
+                      ● This project basically Air conditioner Parts.
+                    </span>
+                    <br />
+                    <span class="pleft">
+                      ● Authentication system implement by firebase so that all
+                      users can visit the website but can’t access all the
+                      features without log in & after log in user can place
+                      order.
+                    </span>
+                    <br />
+                    <span class="pleft">
+                      ● Only the admin can see all users in the dashboard and
+                      make others as an admin.
+                    </span>
+                    <br />
+                    <span class="pleft">
+                      ● Users can make payments by using the card.
+                    </span>
+                    <br />
+                    <span class="pleft">
+                      Tecnology used: React JS, Tostify , React Tailwind,Heroku,
+                      Sweet Alert2, React Ratting, React Slider Use to create
+                      this project.
+                    </span>
+                  </span>
                 </div>
               </div>
             </div>
@@ -423,6 +460,12 @@
     <script>
       function myFunction() {
         var popup = document.getElementById("myPopup");
+        popup.classList.toggle("show");
+      }
+    </script>
+    <script>
+      function myFunctiont() {
+        var popup = document.getElementById("myPopupt");
         popup.classList.toggle("show");
       }
     </script>
